delete product and product docs fixed
