# backend/handlers/product.go
@@ -30,10 +30,10 @@ type UpdateProductRequest struct {
 //	@Description	Эта функция возвращает список всех продуктов с пагинацией и возможностью подгрузки категорий
 //	@Tags			Products
 //	@Produce		json
-//	@Param			page	query		int						false	"Номер страницы"					default(1)
-//	@Param			limit	query		int						false	"Количество элементов на странице"	default(10)
-//	@Success		200		{object}	map[string]interface{}	"Список продуктов с информацией о пагинации"
-//	@Failure		500		{object}	map[string]interface{}	"Ошибка сервера при получении списка продуктов"
+//	@Param			page	query		int				false	"Номер страницы"					default(1)
+//	@Param			limit	query		int				false	"Количество элементов на странице"	default(10)
+//	@Success		200		{array}		model.Product	"Список продуктов с информацией о пагинации"
+//	@Failure		500		{object}	APIError		"Ошибка сервера при получении списка продуктов"
 //
 //	@Router			/products [get]
 func GetAllProducts(c *fiber.Ctx) error {
@@ -43,7 +43,8 @@ func GetAllProducts(c *fiber.Ctx) error {
 
 	if err != nil {
 		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
-			"code":    500,
+			"status":  500,
+			"success": false,
 			"message": "Failed to retrieve products",
 		})
 	}
@@ -57,11 +58,11 @@ func GetAllProducts(c *fiber.Ctx) error {
 //	@Description	Эта функция возвращает информацию о продукте по его уникальному идентификатору
 //	@Tags			Products
 //	@Produce		json
-//	@Param			id	path		string					true	"ID продукта"
-//	@Success		200	{object}	map[string]interface{}	"Информация о продукте"
-//	@Failure		400	{object}	map[string]interface{}	"Неверный запрос или отсутствующий ID"
-//	@Failure		404	{object}	map[string]interface{}	"Продукт не найден"
-//	@Failure		500	{object}	map[string]interface{}	"Ошибка сервера при получении продукта"
+//	@Param			id	path		string			true	"ID продукта"
+//	@Success		200	{object}	model.Product	"Информация о продукте"
+//	@Failure		400	{object}	APIError		"Неверный запрос или отсутствующий ID"
+//	@Failure		404	{object}	APIError		"Продукт не найден"
+//	@Failure		500	{object}	APIError		"Ошибка сервера при получении продукта"
 //
 //	@Router			/products/{id} [get]
 func GetProductById(c *fiber.Ctx) error {
@@ -70,7 +71,8 @@ func GetProductById(c *fiber.Ctx) error {
 
 	if err != nil {
 		return c.JSON(fiber.Map{
-			"code":    400,
+			"status":  400,
+			"success": false,
 			"message": "Invalid UUID Format",
 		})
 	}
@@ -81,20 +83,24 @@ func GetProductById(c *fiber.Ctx) error {
 	if err != nil {
 		if errors.Is(err, gorm.ErrRecordNotFound) {
 			return c.Status(fiber.StatusNotFound).JSON(fiber.Map{
-				"code":    404,
+				"status":  404,
+				"success": false,
 				"message": "Product not found",
 			})
 		}
 
 		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
-			"code":    500,
+			"status":  500,
+			"success": false,
 			"message": "Internal Server Error",
 		})
 	}
 
 	return c.JSON(fiber.Map{
-		"code": 200,
-		"data": Product,
+		"status":  200,
+		"success": true,
+		"message": "success",
+		"data":    Product,
 	})
 }
 
@@ -105,11 +111,11 @@ func GetProductById(c *fiber.Ctx) error {
 //	@Tags			Products
 //	@Accept			json
 //	@Produce		json
-//	@Param			product	body		model.Product			true	"Данные нового продукта"
-//	@Success		201		{object}	map[string]interface{}	"Информация о созданном продукте"
-//	@Failure		400		{object}	map[string]interface{}	"Неверный формат запроса"
-//	@Failure		422		{object}	map[string]interface{}	"Ошибка валидации данных"
-//	@Failure		500		{object}	map[string]interface{}	"Ошибка сервера при создании продукта"
+//	@Param			product	body		model.Product	true	"Данные нового продукта"
+//	@Success		201		{object}	model.Product	"Информация о созданном продукте"
+//	@Failure		400		{object}	APIError		"Неверный формат запроса"
+//	@Failure		422		{object}	APIError		"Ошибка валидации данных"
+//	@Failure		500		{object}	APIError		"Ошибка сервера при создании продукта"
 //
 //	@Router			/products [post]
 func CreateProduct(c *fiber.Ctx) error {
@@ -117,7 +123,8 @@ func CreateProduct(c *fiber.Ctx) error {
 
 	if err := c.BodyParser(product); err != nil {
 		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
-			"code":    400,
+			"status":  400,
+			"success": false,
 			"message": "Invalid request format",
 		})
 	}
@@ -125,35 +132,29 @@ func CreateProduct(c *fiber.Ctx) error {
 	validate := validator.New()
 	if err := validate.Struct(product); err != nil {
 		return c.Status(fiber.StatusUnprocessableEntity).JSON(fiber.Map{
-			"code":    422,
+			"status":  422,
+			"success": false,
 			"message": "Validation error",
 			"errors":  err.Error(),
 		})
 	}
 
 	DB := database.DB
-
-	// var category model.Category
-	// if err := DB.First(&category, "id = ?", product.CategoryID).Error; err != nil {
-	// 	return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
-	// 		"code":    400,
-	// 		"message": "Invalid category ID",
-	// 	})
-	// }
 	product.ID = guuid.New()
-	// product.Category = &category
 
 	err := DB.Create(&product).Error
 
 	if err != nil {
 		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
-			"code":    500,
+			"status":  500,
+			"success": false,
 			"message": "Could not create product",
 		})
 	}
 
 	return c.Status(fiber.StatusCreated).JSON(fiber.Map{
-		"code":    201,
+		"status":  201,
+		"success": true,
 		"message": "Product created successfully",
 		"data":    product,
 	})
@@ -166,19 +167,20 @@ func CreateProduct(c *fiber.Ctx) error {
 //	@Tags			Products
 //	@Accept			json
 //	@Produce		json
-//	@Param			id		path		string					true	"ID продукта"
-//	@Param			product	body		model.Product			true	"Данные для обновления продукта"
-//	@Success		200		{object}	map[string]interface{}	"Информация об обновлённом продукте"
-//	@Failure		400		{object}	map[string]interface{}	"Неверный формат запроса или отсутствующий ID"
-//	@Failure		404		{object}	map[string]interface{}	"Продукт не найден"
-//	@Failure		500		{object}	map[string]interface{}	"Ошибка сервера при обновлении продукта"
+//	@Param			id		path		string			true	"ID продукта"
+//	@Param			product	body		model.Product	true	"Данные для обновления продукта"
+//	@Success		200		{object}	model.Product	"Информация об обновлённом продукте"
+//	@Failure		400		{object}	APIError		"Неверный формат запроса или отсутствующий ID"
+//	@Failure		404		{object}	APIError		"Продукт не найден"
+//	@Failure		500		{object}	APIError		"Ошибка сервера при обновлении продукта"
 //
 //	@Router			/products/{id} [put]
 func UpdateProduct(c *fiber.Ctx) error {
 	id, err := guuid.Parse(c.Params("id"))
 	if err != nil {
 		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
-			"code":    400,
+			"status":  400,
+			"success": false,
 			"message": "Invalid UUID format for Product ID",
 		})
 	}
@@ -186,14 +188,16 @@ func UpdateProduct(c *fiber.Ctx) error {
 	var body UpdateProductRequest
 	if err := c.BodyParser(&body); err != nil {
 		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
-			"code":    400,
+			"status":  400,
+			"success": false,
 			"message": "Invalid request body",
 		})
 	}
 
 	if err := validator.New().Struct(body); err != nil {
 		return c.Status(fiber.StatusUnprocessableEntity).JSON(fiber.Map{
-			"code":    422,
+			"status":  422,
+			"success": false,
 			"message": err.Error(),
 		})
 	}
@@ -204,12 +208,14 @@ func UpdateProduct(c *fiber.Ctx) error {
 	if err := db.First(&product, "id = ?", id).Error; err != nil {
 		if errors.Is(err, gorm.ErrRecordNotFound) {
 			return c.Status(fiber.StatusNotFound).JSON(fiber.Map{
-				"code":    404,
+				"status":  404,
+				"success": false,
 				"message": "Product not found",
 			})
 		}
 		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
-			"code":    500,
+			"status":  500,
+			"success": false,
 			"message": "Internal Server Error",
 		})
 	}
@@ -241,13 +247,15 @@ func UpdateProduct(c *fiber.Ctx) error {
 
 	if err := db.Save(&product).Error; err != nil {
 		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
-			"code":    500,
+			"status":  500,
+			"success": false,
 			"message": "Failed to update product",
 		})
 	}
 
 	return c.Status(fiber.StatusOK).JSON(fiber.Map{
-		"code":    200,
+		"status":  200,
+		"success": true,
 		"message": "Product updated successfully",
 		"data":    product,
 	})
@@ -259,14 +267,36 @@ func UpdateProduct(c *fiber.Ctx) error {
 //	@Description	Эта функция удаляет продукт по его уникальному идентификатору
 //	@Tags			Products
 //	@Produce		json
-//	@Param			id	path		string					true	"ID продукта"
-//	@Success		200	{object}	map[string]interface{}	"Сообщение об успешном удалении"
-//	@Failure		400	{object}	map[string]interface{}	"Неверный формат запроса или отсутствующий ID"
-//	@Failure		404	{object}	map[string]interface{}	"Продукт не найден"
-//	@Failure		500	{object}	map[string]interface{}	"Ошибка сервера при удалении продукта"
+//	@Param			id	path		string			true	"ID продукта"
+//	@Success		200	{object}	model.Product	"Сообщение об успешном удалении"
+//	@Failure		400	{object}	APIError		"Неверный формат запроса или отсутствующий ID"
 //
 //	@Router			/products/{id} [delete]
 func DeleteProduct(c *fiber.Ctx) error {
+	id, err := guuid.Parse(c.Params("id"))
 
-	return nil
+	if err != nil {
+		return c.JSON(fiber.Map{
+			"status":  400,
+			"success": false,
+			"message": "Invalid ID format",
+		})
+	}
+
+	db := database.DB
+	err = db.Where("id = ?", id).Delete(&model.Product{}).Error
+
+	if err != nil {
+		return c.JSON(fiber.Map{
+			"status":  500,
+			"success": false,
+			"message": "Failed to delete Product",
+		})
+	}
+
+	return c.JSON(fiber.Map{
+		"status":  200,
+		"success": true,
+		"message": "Product was removed",
+	})
 }
